--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-  "url": "https://dmtrrmntsv.github.io/oxton_v2/",
+  "url": "https://dmtrrmntsv.github.io/oxton_v2_front/",
   "name": "OXTON",
-  "iconUrl": "https://dmtrrmntsv.github.io/oxton_v2/logo512_1.png",
-  "termsOfUseUrl": "https://dmtrrmntsv.github.io/oxton_v2/terms.md",
-  "privacyPolicyUrl": "https://dmtrrmntsv.github.io/oxton_v2/privacy.md"
+  "iconUrl": "https://dmtrrmntsv.github.io/oxton_v2_front/logo512_1.png",
+  "termsOfUseUrl": "https://dmtrrmntsv.github.io/oxton_v2_front/terms.md",
+  "privacyPolicyUrl": "https://dmtrrmntsv.github.io/oxton_v2_front/privacy.md"
 }
